--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Yoda's House
-email: yoda@force.com
+title: SembleLang
+email: draxdo@gmail.com
 description: >-
-  Very good my site is!
+  Duck typing. Faster than C.
 
 #config
 theme: jekyll-theme-minimal
