--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: SembleLang
 email: draxdo@gmail.com
 description: >-
-  Duck typing. Faster than C.
+  <h1><a href="/downloads.html">Downloads</a></h1>
 
 #config
 theme: jekyll-theme-minimal
