--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: >-
   Duck typing. Faster than C.
   <h3><a href="https://semblelang.org">Home</a></h3>
   <h3><a href="/downloads.html">Downloads</a></h3>
+  <h3><a href="/docs.html">Docs</a></h3>
 
 #config
 theme: jekyll-theme-minimal
