--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: SembleLang
-email: draxdo@gmail.com
+title: CatchStills
+email: brendan@catchstills.com
 description: >-
-  Duck typing. Faster than C.
-  <h3><a href="https://semblelang.org">Home</a></h3>
-  <h3><a href="/downloads.html">Downloads</a></h3>
-  <h3><a href="/docs.html">Docs</a></h3>
+  Quality images, for free.
+  <h3><a href="https://catchstills.com">Home</a></h3>
+  <h3><a href="/gallery.html">Gallery</a></h3>
+  <h3><a href="/about.html">About</a></h3>
 
 #config
-theme: jekyll-theme-minimal
+theme: jekyll-theme-modernist
