--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ title: CatchStills
 email: brendan@catchstills.com
 description: >-
   Quality images, for free.
-  <h3><a href="https://catchstills.com">Home</a></h3>
-  <h3><a href="/gallery.html">Gallery</a></h3>
-  <h3><a href="/about.html">About</a></h3>
+  <h3><a href="https://catchstills.com">Home</a>    <a href="/gallery.html">Gallery</a>   <a href="/about.html">About</a></h3>
 
 #config
 theme: jekyll-theme-cayman
