added logo/fixed gallery

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: CatchStills
+title: <img src="logo.png" alt="//logo//"> CatchStills
 email: brendan@catchstills.com
 description: >-
   Quality images, for free.
